--- a/1-Authentication/5-sign-in-express/App/package.json
+++ b/1-Authentication/5-sign-in-express/App/package.json
@@ -1,20 +1,18 @@
 {
   "name": "msal-node-auth-code",
   "version": "1.0.0",
-  "description": "sample web app for msal-node",
+  "description": "sample web app for msal-node no no-identity code",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^1.17.2",
-    "axios": "^1.0.0",
+    "@azure/msal-node": "^2.5.1",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "hbs": "^4.2.0",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0"
   }
