--- a/1-Authentication/1-sign-in-react/SPA/package.json
+++ b/1-Authentication/1-sign-in-react/SPA/package.json
@@ -14,6 +14,7 @@
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
+        "@babel/plugin-transform-private-property-in-object": "^7.24.7",
         "react-scripts": "^5.0.1"
     },
     "scripts": {
