--- a/1-Authentication/2-sign-in-angular/SPA/angular.json
+++ b/1-Authentication/2-sign-in-angular/SPA/angular.json
@@ -16,7 +16,11 @@
             "outputPath": "dist/1-sign-in-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            // "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
