--- a/1-Authentication/2-sign-in-angular/SPA/tsconfig.spec.json
+++ b/1-Authentication/2-sign-in-angular/SPA/tsconfig.spec.json
@@ -13,6 +13,10 @@
   ],
   "include": [
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "src/**/*.ts"
+    // "**/*.spec.ts",
+    // "**/*.d.ts",
+    // "**/*.ts"
   ]
 }
