update package.json to be more precise

--- a/1-Authentication/1-sign-in-react/SPA/package.json
+++ b/1-Authentication/1-sign-in-react/SPA/package.json
@@ -30,7 +30,7 @@
         ]
     },
     "jest": {
-        "transformIgnorePatterns": ["!node_modules/"] 
+        "transformIgnorePatterns": ["node_modules/(?!(@azure/msal-browser|@azure/msal-react)/)"]
     },
     "browserslist": {
         "production": [
