fix config file

--- a/1-Authentication/2-sign-in-angular/SPA/tsconfig.spec.json
+++ b/1-Authentication/2-sign-in-angular/SPA/tsconfig.spec.json
@@ -13,10 +13,6 @@
   ],
   "include": [
     "src/**/*.spec.ts",
-    "src/**/*.d.ts",
-    "src/**/*.ts"
-    // "**/*.spec.ts",
-    // "**/*.d.ts",
-    // "**/*.ts"
+    "src/**/*.d.ts"
   ]
 }
