--- a/1-Authentication/6-sign-in-node-cli-app/AppCreationScripts/apps.json
+++ b/1-Authentication/6-sign-in-node-cli-app/AppCreationScripts/apps.json
@@ -1,6 +1,6 @@
 {
     "Sample": {
-        "Title": "A Node.js console application using MSAL Node to authenticate users against Azure AD for Customers",
+        "Title": "A Node.js console application using MSAL Node to authenticate users against Microsoft Entra External ID",
         "Client": "NodeConsoleApp",
         "Level": 100
     },
