--- a/1-Authentication/1-sign-in-react/AppCreationScripts/apps.json
+++ b/1-Authentication/1-sign-in-react/AppCreationScripts/apps.json
@@ -1,6 +1,6 @@
 {
     "Sample": {
-        "Title": "A React single-page application using MSAL React to authenticate users against Azure AD for Customers",
+        "Title": "A React single-page application using MSAL React to authenticate users against Microsoft Entra External ID",
         "Client": "SinglePageApplication",
         "Level": 100
     },
