--- a/1-Authentication/2-sign-in-angular/AppCreationScripts/apps.json
+++ b/1-Authentication/2-sign-in-angular/AppCreationScripts/apps.json
@@ -1,6 +1,6 @@
 {
     "Sample": {
-        "Title": "An Angular single-page application using MSAL Angular to authenticate users against Azure AD for Customers",
+        "Title": "An Angular single-page application using MSAL Angular to authenticate users against Microsoft Entra External ID",
         "Client": "SinglePageApplication",
         "Level": 100
     },
