--- a/1-Authentication/3-sign-in-electron/App/package.json
+++ b/1-Authentication/3-sign-in-electron/App/package.json
@@ -1,7 +1,7 @@
 {
     "name": "electron-test-app",
     "version": "1.0.0",
-    "description": "Electron application using MSAL Node to authentication users against Customer Identity Access Management (CIAM)",
+    "description": "Electron application using MSAL Node to authentication users against Microsoft Entra External ID",
     "main": "main.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
