--- a/1-Authentication/4-sign-in-device-code/App/package.json
+++ b/1-Authentication/4-sign-in-device-code/App/package.json
@@ -1,7 +1,7 @@
 {
     "name": "4-sign-in-device-code",
     "version": "1.0.0",
-    "description": "A Node headless application using MSAL Node to authentication users with the device code flow against Customer Identity Access Management (CIAM)",
+    "description": "A Node headless application using MSAL Node to authentication users with the device code flow against Microsoft Entra External ID",
     "main": "index.js",
     "scripts": {
         "start": "node index.js"
