--- a/1-Authentication/4-sign-in-device-code/AppCreationScripts/apps.json
+++ b/1-Authentication/4-sign-in-device-code/AppCreationScripts/apps.json
@@ -1,6 +1,6 @@
 {
     "Sample": {
-        "Title": "A Node.js browserless application using MSAL Node to authenticate users against Azure AD for Customers",
+        "Title": "A Node.js browserless application using MSAL Node to authenticate users against Microsoft Entra External ID",
         "Client": "NodeBrowserlessApp",
         "Level": 100
     },
