--- a/1-Authentication/6-sign-in-node-cli-app/App/package.json
+++ b/1-Authentication/6-sign-in-node-cli-app/App/package.json
@@ -1,7 +1,7 @@
 {
   "name": "msal-node-auth-code-cli-app",
   "version": "1.0.0",
-  "description": "CLI sample for msal-node public client application using using auth code flow with PKCE to sign-in users on azure ad CIAM",
+  "description": "CLI sample for msal-node public client application using using auth code flow with PKCE to sign-in users on Microsoft Entra External ID",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
