--- a/2-Authorization/1-call-api-react/SPA/package.json
+++ b/2-Authorization/1-call-api-react/SPA/package.json
@@ -2,7 +2,7 @@
     "name": "1-call-api-react",
     "version": "0.1.0",
     "private": true,
-    "description": "React single-page application using MSAL React to authenticate users with Azure AD for Customers and call a protected ASP.NET Core web API",
+    "description": "React single-page application using MSAL React to authenticate users with Microsoft Entra External ID and call a protected ASP.NET Core web API",
     "dependencies": {
         "@azure/msal-browser": "^2.37.0",
         "@azure/msal-react": "^1.5.7",
