--- a/2-Authorization/0-call-api-vanillajs/SPA/package.json
+++ b/2-Authorization/0-call-api-vanillajs/SPA/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ciam-sign-in-javascript",
     "version": "1.0.0",
-    "description": "Vanilla JavaScript single-page application using MSAL.js to authenticate users against Azure AD Customer Identity Access Management (Microsoft Entra External ID)",
+    "description": "Vanilla JavaScript single-page application using MSAL.js to authenticate users against Microsoft Entra External ID",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
