--- a/2-Authorization/1-call-api-react/API/ToDoListAPI/appsettings.json
+++ b/2-Authorization/1-call-api-react/API/ToDoListAPI/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AzureAd": {
-    "Instance": "https://Enter_the_Tenant_Subdomain_Here.ciamlogin.com/",
-    "TenantId": "Enter_the_Tenant_Id_Here",
-    "ClientId": "Enter_the_Application_Id_Here",
+    "Instance": "https://TrialTenantkwFwHYij.ciamlogin.com/",
+    "TenantId": "1f8afb3b-271f-401d-ac59-f53b1c7bfce7",
+    "ClientId": "9c41be2b-d52d-4209-b987-1459a3d62d99",
     "Scopes": {
       "Read": ["ToDoList.Read", "ToDoList.ReadWrite"],
       "Write": ["ToDoList.ReadWrite"]
