--- a/2-Authorization/2-call-api-angular/SPA/package.json
+++ b/2-Authorization/2-call-api-angular/SPA/package.json
@@ -10,33 +10,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.4",
+    "@angular/animations": "^18.0.5",
     "@angular/cdk": "^18.0.5",
-    "@angular/common": "^18.0.4",
-    "@angular/compiler": "^18.0.4",
-    "@angular/core": "^18.0.4",
-    "@angular/forms": "^18.0.4",
-    "@angular/material": "^16.2.14",
-    "@angular/platform-browser": "^18.0.4",
-    "@angular/platform-browser-dynamic": "^18.0.4",
-    "@angular/router": "^18.0.4",
-    "@azure/msal-angular": "^2.5.7",
-    "@azure/msal-browser": "^2.37.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "@angular/common": "^18.0.5",
+    "@angular/compiler": "^18.0.5",
+    "@angular/core": "^18.0.5",
+    "@angular/forms": "^18.0.5",
+    "@angular/material": "^18.0.5",
+    "@angular/platform-browser": "^18.0.5",
+    "@angular/platform-browser-dynamic": "^18.0.5",
+    "@angular/router": "^18.0.5",
+    "@azure/msal-angular": "^3.0.20",
+    "@azure/msal-browser": "^3.17.0",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.3",
     "zone.js": "~0.14.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.6",
     "@angular/cli": "~18.0.6",
-    "@angular/compiler-cli": "^18.0.4",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~5.4.5"
+    "@angular/compiler-cli": "^18.0.5",
+    "@types/jasmine": "~5.1.4",
+    "jasmine-core": "~5.1.2",
+    "karma": "~6.4.3",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "^5.4.5"
   }
 }
