update pr branches in workflow

--- a/.github/workflows/send_alert_to_teams.yml
+++ b/.github/workflows/send_alert_to_teams.yml
@@ -2,6 +2,8 @@ name: Send Dependabot Alerts to Teams
 
 on:
   pull_request: # tempoary to test the workflow
+    branches:
+      - main
   workflow_dispatch:
   push:
     branches:
