add github token to env variables

--- a/.github/workflows/send_alert_to_teams.yml
+++ b/.github/workflows/send_alert_to_teams.yml
@@ -28,3 +28,5 @@ jobs:
           milliseconds: 1
           teams-webhook-url: ${{ secrets.TEAMS_WEBHOOK_URL }}
           token: ${{ secrets.LIST_ALERTS_PAT }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
